Css bug, help and combat overlaped and fixed

--- a/src/_css/base/_buttons.scss
+++ b/src/_css/base/_buttons.scss
@@ -34,6 +34,7 @@ button,
     z-index: 200;
     box-shadow: 0 0 10px var(--bg-color);
     background-color: var(--bg-color);
+    margin-top: 2rem;
 
     @include breakpoint.mobile-and-tablet-only {
         position: initial;
